# claude-code-web

./: .gitignore  Dockerfile  SRS.md  requirements.txt  run.sh
backend/: __init__.py  claude_interface.py  config.example.yaml  main.py  models.py  pyproject.toml  requirements.txt  websocket_manager.py
backend/app/: __init__.py
backend/app/api/: __init__.py  dependencies.py  main.py
backend/app/api/routes/: auth.py  config.py  errors.py  status.py  updates.py  websocket.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  audit.py  base.py  config.py  error.py  module_update.py  repository.py  session.py
backend/app/services/: __init__.py  error_detector.py  error_fixer.py  event_bus.py  monitor.py  updater.py
backend/partner_fax/: __manifest__.py
backend/tests/: __init__.py  conftest.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_error_detector.py  test_error_fixer.py  test_monitor.py  test_updater.py
claude-code-web/: .gitignore  README.md  config.yaml  docker-compose.yml
claude-code-web/backend/: claude_interface.py  main.py  websocket_manager.py
claude-code-web/frontend/: index.html
claude-code-web/frontend/static/: styles.css
frontend/static/: app.js
mobile/: .eslintrc.js  package-lock.json  package.json
mobile/src/app/: App.tsx
mobile/src/app/store/: index.ts
mobile/src/app/store/slices/: authSlice.ts  errorsSlice.ts  statusSlice.ts  updatesSlice.ts
mobile/src/components/dashboard/: ActiveErrorsCard.tsx  MetricsCard.tsx  StatusCard.tsx
mobile/src/screens/auth/: LoginScreen.tsx
mobile/src/screens/dashboard/: DashboardScreen.tsx
mobile/src/screens/errors/: ErrorsListScreen.tsx
mobile/src/services/: api.ts  auth.service.ts  errors.service.ts  status.service.ts  updates.service.ts  websocket.service.ts
mobile/src/types/: api.types.ts
